@@ -1,0 +1,11 @@
+.warning
+{
+	border-color: #e44; 
+	background: #fdd;
+}
+
+.great
+{
+	border-color: #2d2;
+	background: #dfd;
+}
